[package]
name = "decentralized-internet"
version = "0.2.2"
authors = ["Andrew Kamal"]
readme = "README.md"
description = "A library to create decentralized and grid computing applications via Rust"
license = "MIT"
keywords = ["data", "cryptocurrency", "asynchronous", "algorithms", "computing"]
categories = ["development-tools"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fs = "0.0.5"
io = "0.0.2"
env = "0.0.0"
log = "0.4.20"
rand = "0.8.5"
time = "0.3.28"
rayon = "1.7.0"
chrono = "0.4.31"
tokio = "1.32.0"
thread = "0.1.0"
worker = "1.0.0"
futures = "0.3.28"
num_cpus = "1.16.0"
env_logger = "0.10.0"
process_lock = "0.1.0"
streaming-harness = "0.2.0"
